--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,16 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
+bidict==0.22.1
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
 Flask==2.2.3
 Flask-Cors==3.0.10
+Flask-SocketIO==5.3.2
 frozenlist==1.3.3
 idna==3.4
+importlib-metadata==6.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonlines==3.1.0
@@ -16,9 +19,12 @@ MarkupSafe==2.1.2
 multidict==6.0.4
 numpy==1.24.2
 openai==0.27.0
+python-engineio==4.3.4
+python-socketio==5.7.2
 requests==2.28.2
 six==1.16.0
 tqdm==4.65.0
 urllib3==1.26.14
 Werkzeug==2.2.3
 yarl==1.8.2
+zipp==3.15.0
